# qrdecoder

./: Cargo.toml  build.sh  console.wit  qrdecoder.wit  qrdecoder_module.wit  wasm-opt-doc.txt
demo/: index.html
src/: console.rs  lib.rs  qrdecoder.rs
