[package]
authors = ["Fabrice Desré <fabrice@desre.org>"]
edition = "2021"
license = "AGPL-3.0-only"
name = "qrdecoder"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[features]
default = []

[dependencies]
image = {version = "0.24", default-features = false}
quircs = "*"
wee_alloc = {version = "0.4.5"}
wit-bindgen-guest-rust = {git = "https://github.com/bytecodealliance/wit-bindgen.git"}

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
opt-level = "z"
panic = "abort"
rpath = false
